<resources>
    <string name="app_name">Ejercicio02_ComponentesBasicos</string>
    <string name="guardar">Guardar</string>
    <string name="futbol">Futbol</string>
    <string name="baloncesto">Baloncesto</string>
    <string name="tenis">Tenis</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="casado">Casado</string>
    <string name="soltero">Soltero</string>
</resources>