<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@color/colorTitle"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ptNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/introduce_tu_nombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:autofillHints="" />

        <RadioGroup
            android:id="@+id/rgCS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbSoltero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soltero" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casado" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <LinearLayout
            android:id="@+id/checkboxGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbFutbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/futbol" />

            <CheckBox
                android:id="@+id/cbBaloncesto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baloncesto" />

            <CheckBox
                android:id="@+id/cbTenis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/tenis"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

        <Button
            android:id="@+id/bGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />

    </LinearLayout>
</layout>